--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.25.1",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
